fixes color contrast on warning buttons

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -68,6 +68,10 @@ a {
   &:hover {
     text-decoration: none !important;
   }
+
+  &.warning, &.warning:hover {
+    color: black;
+  }
 }
 
 .button.hollow {
